cilium-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: cilium-monitoring
spec:
  rules:
  - host: prometheus.home.virtualelephant.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
